<resources>
    <string name="app_name">ShiYue</string>
    <string name="copyright_2011_2022_cppteam_all_rights_reserved">Copyright © 2011-2022 Cppteam. All Rights Reserved.
    </string>
    <string name="cppteam">CppTeam版权所有</string>
    <string name="about_us">关于我们</string>
    <string name="shiyue">世阅</string>
    <string name="version_1_1_1">Version 1.1.1</string>
    <string name="xieyi">《软件许可及服务协议》</string>
    <string name="zhaiyao">《隐私保护指引摘要》</string>
    <string name="zhiying">《隐私保护指引》</string>
    <string name="_0759_2383381">客服电话:0759-2383381</string>
    <string name="new_ver">检测新版本</string>
    <string name="todo11">TODO</string>
    <string name="todo22">TODO</string>
    <string name="todo33">TODO</string>
    <string name="todo44">TODO</string>
    <string name="todo55">TODO</string>
    <string name="setting">设置</string>
    <string name="clean">清理缓存</string>
    <string name="_847kb">847kb</string>
    <string name="reming_sound">点击提示音</string>
    <string name="push_news">自动推送热门新闻</string>
    <string name="exit">退出登录</string>
    <string name="todo77">TODO</string>
    <string name="todo88">TODO</string>
    <string name="todo99">TODO</string>
    <string name="todo21">TODO</string>
    <string name="todo31">TODO</string>
    <string name="todo32">TODO</string>
    <string name="todo43">TODO</string>
    <string name="feed_back">意见反馈</string>
    <string name="text">好的意见能让我们给用户带来更好的体验</string>
    <string name="commit">提交</string>
    <string name="idea">说说你的意见吧</string>
    <string name="todo12">TODO</string>
    <string name="todo212">TODO</string>
    <string name="todo312">TODO</string>
    <string name="copy">复制</string>
    <string name="result">识别结果</string>
    <string name="translate">翻译</string>
    <string name="speak">播报</string>
    <string name="todo1">TODO</string>
    <string name="todo2">TODO</string>
    <string name="todo3">TODO</string>
    <string name="todo4">TODO</string>
    <string name="todo5">TODO</string>
    <string name="todo35">TODO</string>
    <string name="todo19">TODO</string>
    <string name="todo8">TODO</string>
    <string name="todo7">TODO</string>
    <string name="todo6">TODO</string>
    <string name="login">使用本机号码一键登录</string>
    <string name="number">136****39999</string>
    <string name="todo">TODO</string>
    <string name="btn_login">登录</string>
    <string name="get_code">获取验证码</string>
    <string name="num_input">请输入手机号</string>
    <string name="code_text">验证码</string>
    <string name="login_text">登录</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>