<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                                   android:layout_height="match_parent">

    <TextView
            android:text="@string/copy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView26"
            android:textSize="16sp" android:textColor="#151414"
            app:layout_constraintTop_toBottomOf="@+id/imageView22"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.844"
            app:layout_constraintVertical_bias="0.208"/>
    <ImageView
            android:layout_width="61dp"
            android:layout_height="53dp" app:srcCompat="@drawable/icon_round" android:id="@+id/imageView22"
            tools:layout_editor_absoluteY="609dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="48dp" android:contentDescription="@string/todo1"/>
    <ImageView
            android:layout_width="411dp"
            android:layout_height="79dp" app:srcCompat="@drawable/retancle" android:id="@+id/imageView17"
            tools:layout_editor_absoluteX="0dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.0"
            android:contentDescription="@string/todo2"/>
    <ImageView
            android:layout_width="25dp"
            android:layout_height="37dp" app:srcCompat="@drawable/back_btn" android:id="@+id/imageView18"
            tools:layout_editor_absoluteY="22dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.041"
            android:contentDescription="@string/todo3"/>
    <TextView
            android:text="@string/result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView20"
            android:textSize="28sp" android:textColor="#191818" app:layout_constraintStart_toEndOf="@+id/imageView18"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.411"
            app:layout_constraintBottom_toBottomOf="@+id/imageView17"
            app:layout_constraintTop_toTopOf="@+id/imageView17"/>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@drawable/line" android:id="@+id/imageView19"
            tools:layout_editor_absoluteY="67dp" tools:layout_editor_absoluteX="0dp" android:contentDescription="@string/todo4"/>
    <ImageView
            android:layout_width="384dp"
            android:layout_height="474dp" app:srcCompat="@drawable/retancle2" android:id="@+id/imageView20"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toBottomOf="@+id/imageView17"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.08"
            android:contentDescription="@string/todo"/>
    <TextView
            android:text="@string/result"
            android:layout_width="307dp"
            android:layout_height="461dp" android:id="@+id/textView22" tools:layout_editor_absoluteY="99dp"
            tools:layout_editor_absoluteX="53dp" android:textSize="24sp" android:textColor="#121111"/>
    <ImageView
            android:layout_width="61dp"
            android:layout_height="53dp" app:srcCompat="@drawable/icon_round" android:id="@+id/imageView21"
            tools:layout_editor_absoluteY="609dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/imageView23" app:layout_constraintHorizontal_bias="0.452"
            android:contentDescription="@string/todo"/>
    <ImageView
            android:layout_width="61dp"
            android:layout_height="53dp" app:srcCompat="@drawable/round_blue" android:id="@+id/imageView23"
            app:layout_constraintEnd_toStartOf="@+id/imageView22"
            android:layout_marginEnd="64dp" app:layout_constraintTop_toBottomOf="@+id/textView22"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.425"
            android:contentDescription="@string/todo"/>
    <ImageView
            android:layout_width="32dp"
            android:layout_height="35dp" app:srcCompat="@drawable/icon_translate" android:id="@+id/imageView24"
            tools:layout_editor_absoluteY="619dp" app:layout_constraintStart_toStartOf="@+id/imageView21"
            app:layout_constraintEnd_toEndOf="@+id/imageView21" android:contentDescription="@string/todo"/>
    <ImageView
            android:layout_width="38dp"
            android:layout_height="34dp" app:srcCompat="@drawable/icon_listen" android:id="@+id/imageView25"
            tools:layout_editor_absoluteY="619dp" app:layout_constraintEnd_toEndOf="@+id/imageView23"
            app:layout_constraintStart_toStartOf="@+id/imageView23" android:contentDescription="@string/todo"/>
    <ImageView
            android:layout_width="37dp"
            android:layout_height="31dp" app:srcCompat="@drawable/icon_copy" android:id="@+id/imageView26"
            tools:layout_editor_absoluteY="622dp" app:layout_constraintEnd_toEndOf="@+id/imageView22"
            app:layout_constraintStart_toStartOf="@+id/imageView22" android:contentDescription="@string/todo5"/>
    <TextView
            android:text="@string/translate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView23"
            android:textSize="16sp" android:textColor="#151414"
            app:layout_constraintTop_toBottomOf="@+id/imageView21"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="64dp" app:layout_constraintEnd_toStartOf="@+id/textView25"
            app:layout_constraintHorizontal_bias="0.031" app:layout_constraintVertical_bias="0.208"/>
    <TextView
            android:text="@string/speak"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView25"
            android:textSize="16sp" android:textColor="#151414"
            app:layout_constraintTop_toBottomOf="@+id/imageView23"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="192dp" app:layout_constraintEnd_toStartOf="@+id/textView26"
            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintVertical_bias="0.191"/>
</androidx.constraintlayout.widget.ConstraintLayout>