<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent" android:background="#F0F0F0">

    <ImageView
            android:layout_width="26dp"
            android:layout_height="40dp" app:srcCompat="@drawable/back_btn" android:id="@+id/imageView7"
            app:layout_constraintEnd_toStartOf="@+id/textView12"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.156"
            android:contentDescription="@string/todo" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/imageView13"/>
    <TextView
            android:text="@string/setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView12"
            android:textColor="#121111" android:textSize="28sp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="176dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.06"/>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@drawable/line" android:id="@+id/imageView8"
            tools:layout_editor_absoluteX="0dp" android:contentDescription="@string/todo"
            app:layout_constraintTop_toTopOf="@+id/imageView13" app:layout_constraintBottom_toTopOf="@+id/imageView13"/>

    <ImageView
            android:layout_width="418dp"
            android:layout_height="66dp" app:srcCompat="@drawable/retancle" android:id="@+id/imageView11"
            tools:layout_editor_absoluteY="230dp" tools:layout_editor_absoluteX="-4dp"
            android:contentDescription="@string/todo"/>
    <TextView
            android:text="@string/clean"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView16"
            android:textSize="24sp" android:textColor="#121111" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="12dp" app:layout_constraintTop_toBottomOf="@+id/textView18"
            app:layout_constraintBottom_toTopOf="@+id/textView21" app:layout_constraintVertical_bias="0.724"/>
    <TextView
            android:text="@string/_847kb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView17"
            android:textSize="20sp" app:layout_constraintStart_toEndOf="@+id/textView16"
            app:layout_constraintEnd_toEndOf="@+id/imageView11" app:layout_constraintHorizontal_bias="0.944"
            app:layout_constraintTop_toBottomOf="@+id/switchButton"
            app:layout_constraintBottom_toTopOf="@+id/imageView16" app:layout_constraintVertical_bias="0.54"/>
    <ImageView
            android:layout_width="468dp"
            android:layout_height="67dp" app:srcCompat="@drawable/retancle" android:id="@+id/imageView12"
            tools:layout_editor_absoluteX="-29dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.233"
            android:contentDescription="@string/todo2"/>
    <TextView
            android:text="@string/reming_sound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView19"
            android:textColor="#1C1B1B" android:textSize="24sp"
            app:layout_constraintStart_toStartOf="@+id/imageView13"
            app:layout_constraintEnd_toEndOf="@+id/imageView13" app:layout_constraintHorizontal_bias="0.12"
            app:layout_constraintTop_toBottomOf="@+id/textView18"
            app:layout_constraintBottom_toTopOf="@+id/textView16" app:layout_constraintVertical_bias="0.397"/>
    <ImageView
            android:layout_width="468dp"
            android:layout_height="67dp" app:srcCompat="@drawable/retancle" android:id="@+id/imageView13"
            tools:layout_editor_absoluteX="-29dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.132"
            android:contentDescription="@string/todo3"/>
    <TextView
            android:text="@string/push_news"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView18"
            android:textColor="#1C1B1B" android:textSize="24sp"
            app:layout_constraintStart_toStartOf="@+id/imageView13"
            app:layout_constraintEnd_toEndOf="@+id/imageView13" app:layout_constraintHorizontal_bias="0.148"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.16"/>
    <com.suke.widget.SwitchButton android:layout_width="wrap_content" android:layout_height="wrap_content"
                                  tools:layout_editor_absoluteY="171dp"
                                  app:layout_constraintStart_toEndOf="@+id/textView18"
                                  app:layout_constraintEnd_toEndOf="parent"
                                  app:layout_constraintHorizontal_bias="0.942" android:id="@+id/switchButton">

    </com.suke.widget.SwitchButton>
    <com.suke.widget.SwitchButton android:layout_width="wrap_content" android:layout_height="wrap_content"
                                  tools:layout_editor_absoluteY="108dp"
                                  app:layout_constraintStart_toEndOf="@+id/textView18"
                                  app:layout_constraintEnd_toEndOf="parent"
                                  app:layout_constraintHorizontal_bias="0.942" android:id="@+id/switchButton3">

    </com.suke.widget.SwitchButton>
    <ImageView
            android:layout_width="411dp"
            android:layout_height="81dp" app:srcCompat="@drawable/retancle" android:id="@+id/imageView14"
            tools:layout_editor_absoluteY="296dp" tools:layout_editor_absoluteX="0dp"
            android:contentDescription="@string/todo3"/>
    <TextView
            android:text="@string/about_us"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView21"
            android:textSize="24sp" android:textColor="#121111" app:layout_constraintStart_toStartOf="@+id/imageView14"
            app:layout_constraintEnd_toStartOf="@+id/imageView16" app:layout_constraintHorizontal_bias="0.06"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.459"/>
    <ImageView
            android:layout_width="22dp"
            android:layout_height="32dp" app:srcCompat="@drawable/go_btn" android:id="@+id/imageView16"
            android:rotation="180"
            app:layout_constraintEnd_toEndOf="@+id/imageView14"
            android:layout_marginEnd="28dp" android:contentDescription="@string/todo4"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.459"/>
    <com.skydoves.elasticviews.ElasticButton
            android:layout_width="224dp"
            app:button_cornerRadius="10dp"
            android:background="@color/btn_blue"
            android:layout_height="58dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView14" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497" app:layout_constraintVertical_bias="0.155" android:text="@string/exit"
            android:textColor="#F6F2F2" android:textSize="24sp">

    </com.skydoves.elasticviews.ElasticButton>
</androidx.constraintlayout.widget.ConstraintLayout>