<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent">
    <TextView
            android:text="@string/copyright_2011_2022_cppteam_all_rights_reserved"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView11"
            android:textSize="12sp" android:textColor="#999999" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.516"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toBottomOf="@+id/textView10"
            app:layout_constraintVertical_bias="0.0"/>
    <TextView
            android:text="@string/cppteam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView10"
            android:textSize="12sp" android:textColor="#999999" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.549"
            app:layout_constraintTop_toBottomOf="@+id/textView6" app:layout_constraintBottom_toBottomOf="parent"/>
    <View
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/line"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintBottom_toTopOf="@+id/imageView2"
            app:layout_constraintTop_toBottomOf="@+id/textView" app:layout_constraintVertical_bias="0.191"/>
    <ImageView
            android:layout_width="25dp"
            android:layout_height="45dp" app:srcCompat="@drawable/back_btn" android:id="@+id/imageView"
            app:layout_constraintEnd_toStartOf="@+id/textView"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.306"
            app:layout_constraintVertical_bias="0.068" android:contentDescription="@string/todo"/>
    <TextView
            android:text="@string/about_us"
            android:layout_width="137dp"
            android:layout_height="46dp" android:id="@+id/textView"
            android:textColor="#0B0A0A" android:textSize="34sp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.067"
            app:layout_constraintHorizontal_bias="0.532"/>
    <ImageView
            android:layout_width="87dp"
            android:layout_height="99dp" app:srcCompat="@drawable/app_logo" android:id="@+id/imageView2"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.527"
            app:layout_constraintVertical_bias="0.088" android:contentDescription="@string/todo"/>
    <TextView
            android:text="@string/shiyue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView2"
            android:textSize="24sp" android:textColorHint="#131313"
            android:textColor="#0B0A0A" app:layout_constraintTop_toBottomOf="@+id/imageView2"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.039"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.526"/>
    <TextView
            android:text="@string/version_1_1_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView3"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.532" app:layout_constraintVertical_bias="0.018"
            android:textColor="#353535"/>
    <ImageView
            android:layout_width="343dp"
            android:layout_height="wrap_content" app:srcCompat="@drawable/line" android:id="@+id/imageView3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:layout_constraintBottom_toTopOf="@+id/imageView4" app:layout_constraintVertical_bias="0.541"
            android:contentDescription="@string/todo"/>
    <ImageView
            android:layout_width="343dp"
            android:layout_height="wrap_content" app:srcCompat="@drawable/line" android:id="@+id/imageView4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="236dp" app:layout_constraintHorizontal_bias="0.47"
            android:contentDescription="@string/todo"/>
    <TextView
            android:text="@string/feed_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView4"
            android:textSize="24sp" android:textColor="#0C0C0C" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp" android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toTopOf="@+id/imageView3" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"/>
    <ImageView
            android:layout_width="26dp"

            android:layout_height="33dp" app:srcCompat="@drawable/go_btn" android:id="@+id/imageView5"
            android:rotation="180"
            app:layout_constraintStart_toEndOf="@+id/textView4" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.821" app:layout_constraintBottom_toTopOf="@+id/imageView6"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.886"
            android:contentDescription="@string/todo"/>
    <TextView
            android:text="@string/new_ver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView5"
            android:textSize="24sp" android:textColor="#090909" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.109"
            android:layout_marginBottom="12dp" app:layout_constraintBottom_toTopOf="@+id/imageView4"/>
    <ImageView
            android:layout_width="26dp"
            android:layout_height="33dp" app:srcCompat="@drawable/go_btn" android:id="@+id/imageView6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView5" app:layout_constraintHorizontal_bias="0.802"
            android:rotation="180" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.637"
            android:contentDescription="@string/todo"/>
    <TextView
            android:text="@string/xieyi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView6"
            android:textSize="12sp" android:textColor="#5A688B"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.829" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.527"/>
    <TextView
            android:text="@string/zhaiyao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView7"
            android:textColor="#5A688B" android:textSize="12sp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/textView8" app:layout_constraintHorizontal_bias="0.826"
            app:layout_constraintTop_toBottomOf="@+id/textView6" app:layout_constraintBottom_toTopOf="@+id/textView9"/>
    <TextView
            android:text="@string/zhiying"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView8"
            android:textColor="#5A688B" android:textSize="12sp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="88dp" app:layout_constraintTop_toBottomOf="@+id/textView6"
            app:layout_constraintBottom_toTopOf="@+id/textView9"/>
    <TextView
            android:text="@string/_0759_2383381"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView9"
            android:textSize="12sp" android:textColor="#999999" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.541"
            app:layout_constraintBottom_toTopOf="@+id/textView10" android:layout_marginBottom="8dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>